# nmBot

./: .dockerignore  .env.dev  .env.prod  .env.template  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  template.env
data/animethesaurus/: data.json
data/ghsync/: commits.json
data/icu/: icu.json
data/long/: images.json  templates.json
data/rbq/: prompts.json
nmbot/plugins/bracket_closer/: __init__.py  db.py
nmbot/plugins/bracket_closer/migrations/: 745cdf3b22b9_init_bp.py
nmbot/plugins/help/: __init__.py
nmbot/plugins/icu/: __init__.py  config.py  db.py  formatter.py
nmbot/plugins/icu/migrations/: 6bc7a398279f_init.py
nmbot/plugins/long/: __init__.py  config.py  core.py  db.py  utils.py
nmbot/plugins/long/migrations/: 918ce1172287_init.py  e0ce142785b0_remove_shortcut_enabled.py
nmbot/plugins/nm/: __init__.py  config.py  db.py  util.py
nmbot/plugins/nm/adapters/: base.py  deepinfra.py  deepseek.py  gemini.py
nmbot/plugins/nm/migrations/: 1c89472a60cd_init.py
nmbot/plugins/repeater/: __init__.py  message_hash.py
nmbot/plugins/utility/: __init__.py  config.py  db.py
nmbot/plugins/utility/migrations/: 76459b795155_add_friend_request.py  e356940c4418_init_group_util.py  f33404bd8f8d_add_invalidated_state.py
nmbot/plugins/wolfram/: __init__.py
plugins/animethesaurus/: __init__.py  config.py
plugins/b23/: __init__.py
plugins/bracket_closer/: __init__.py  config.py
plugins/gemini/: __init__.py  config.py  db.py
plugins/gemini/migrations/: a44150da90e3_.py  efd4e6f8e7c0_.py
plugins/ghsync/: __init__.py  config.py
plugins/help/: __init__.py  utils.py
plugins/icu/: __init__.py  config.py
plugins/long/: __init__.py  api.py  config.py  database.py  decorator.py  selector.py  utils.py
plugins/ncm/: __init__.py  api.py  cl1p.py  config.py  format.py  utils.py
plugins/quote/: __init__.py  config.py
plugins/rbq/: __init__.py  config.py
plugins/repeater/: __init__.py  config.py  message_hash.py
plugins/respond/: __init__.py  config.py
plugins/sauce/: __init__.py  config.py  formats.py
plugins/utility/: __init__.py
plugins/wolfram/: __init__.py  config.py
