[tool.poetry]
name = "movetobot"
version = "0.1.0"
description = "movetobot"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.0"
parse = "^1.19.0"
numpy = "^1.26.4"
pil-utils = "^0.1.7"
nonebot-adapter-onebot = "^2.2.3"
requests = "^2.30.0"
gputil = "^1.4.0"
nonebot-plugin-localstore = "0.6.0"
pygithub = "^1.58.2"
nonebot-plugin-apscheduler = "0.4.0"
bs4 = "^0.0.1"
crypto = "^1.4.1"
cryptography = "^42.0.4"
pycryptodome = "^3.18.0"
rsa = "^4.9"
puremagic = "^1.21"
pillow = "^10.3.0"
aiohttp = "^3.9.4"
nb-cli = "^1.4.0"
seqsim = "^0.3.2"
pyfunctional = "^1.4.3"
nonebot2 = {extras = ["fastapi"], version = "^2.2.1"}
pydantic-settings = "^2.2.1"
google-generativeai = "^0.5.0"
nonebot-plugin-datastore = "^1.2.0"

[tool.nonebot]
plugins = ["nonebot_plugin_localstore", "nonebot_plugin_apscheduler", "nonebot_plugin_datastore"]
plugin_dirs = ["plugins"]
adapters = [{name = "console", module_name = "nonebot.adapters.console"}, {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
