[project]
name = "nmbot"
version = "0.1.0"
description = "nmbot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = []
plugin_dirs = ["nmbot/plugins"]
builtin_plugins = []

[tool.poetry]
name = "nmbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nonebot-adapter-onebot = "^2.4.4"
nonebot-adapter-console = "^0.6.0"
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
aiohttp = "^3.10.5"
pillow = "^10.4.0"
nonebot-plugin-orm = {extras = ["sqlite"], version = "^0.7.6"}
openai = "^1.44.0"
google-generativeai = "^0.8.3"
nonebot-plugin-alconna = "^0.52.2"
pyfunctional = "^1.5.0"
puremagic = "^1.27"
pil-utils = "^0.1.12"
seqsim = "^0.3.2"
nonebot-plugin-apscheduler = "^0.5.0"
grpcio = "^1.66.2"
greenlet = "^3.1.1"
jiter = "^0.6.1"
httptools = "^0.6.2"
nb-cli = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
